lib/src/ffi/y_dart_bindings_generated.dart


  /// Returns a next sibling of a current XML node, which can be either another `YXmlElement`
  /// or a `YXmlText`. Together with [yxmlelem_first_child] it may be used to iterate over the direct
  /// children of an XML node (in order to iterate over the nested XML structure use
  /// [yxmlelem_tree_walker]).
  ///
  /// If current `YXmlElement` is the last child, this function returns a null pointer.
  /// A returned value should be eventually released using [youtput_destroy] function.
  ffi.Pointer<YOutput> yxml_next_sibling(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxml_next_sibling(
      xml,
      txn,
    );
  }

  late final _yxml_next_siblingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxml_next_sibling');
  late final _yxml_next_sibling = _yxml_next_siblingPtr.asFunction<
      ffi.Pointer<YOutput> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Returns a previous sibling of a current XML node, which can be either another `YXmlElement`
  /// or a `YXmlText`.
  ///
  /// If current `YXmlElement` is the first child, this function returns a null pointer.
  /// A returned value should be eventually released using [youtput_destroy] function.
  ffi.Pointer<YOutput> yxml_prev_sibling(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxml_prev_sibling(
      xml,
      txn,
    );
  }

  late final _yxml_prev_siblingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxml_prev_sibling');
  late final _yxml_prev_sibling = _yxml_prev_siblingPtr.asFunction<
      ffi.Pointer<YOutput> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Returns a parent `YXmlElement` of a current node, or null pointer when current `YXmlElement` is
  /// a root-level shared data type.
  ffi.Pointer<Branch> yxmlelem_parent(
    ffi.Pointer<Branch> xml,
  ) {
    return _yxmlelem_parent(
      xml,
    );
  }

  late final _yxmlelem_parentPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Branch> Function(ffi.Pointer<Branch>)>>(
      'yxmlelem_parent');
  late final _yxmlelem_parent = _yxmlelem_parentPtr
      .asFunction<ffi.Pointer<Branch> Function(ffi.Pointer<Branch>)>();

  /// Returns a number of child nodes (both `YXmlElement` and `YXmlText`) living under a current XML
  /// element. This function doesn't count a recursive nodes, only direct children of a current node.
  int yxmlelem_child_len(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxmlelem_child_len(
      xml,
      txn,
    );
  }

  late final _yxmlelem_child_lenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxmlelem_child_len');
  late final _yxmlelem_child_len = _yxmlelem_child_lenPtr.asFunction<
      int Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Returns a first child node of a current `YXmlElement`, or null pointer if current XML node is
  /// empty. Returned value could be either another `YXmlElement` or `YXmlText`.
  ///
  /// A returned value should be eventually released using [youtput_destroy] function.
  ffi.Pointer<YOutput> yxmlelem_first_child(
    ffi.Pointer<Branch> xml,
  ) {
    return _yxmlelem_first_child(
      xml,
    );
  }

  late final _yxmlelem_first_childPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>)>>(
      'yxmlelem_first_child');
  late final _yxmlelem_first_child = _yxmlelem_first_childPtr
      .asFunction<ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>)>();

  /// Returns an iterator over a nested recursive structure of a current `YXmlElement`, starting from
  /// first of its children. Returned values can be either `YXmlElement` or `YXmlText` nodes.
  ///
  /// Use [yxmlelem_tree_walker_next] function in order to iterate over to a next node.
  /// Use [yxmlelem_tree_walker_destroy] function to release resources used by the iterator.
  ffi.Pointer<YXmlTreeWalker> yxmlelem_tree_walker(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxmlelem_tree_walker(
      xml,
      txn,
    );
  }

  late final _yxmlelem_tree_walkerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YXmlTreeWalker> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxmlelem_tree_walker');
  late final _yxmlelem_tree_walker = _yxmlelem_tree_walkerPtr.asFunction<
      ffi.Pointer<YXmlTreeWalker> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Releases resources associated with a current XML tree walker iterator.
  void yxmlelem_tree_walker_destroy(
    ffi.Pointer<YXmlTreeWalker> iter,
  ) {
    return _yxmlelem_tree_walker_destroy(
      iter,
    );
  }

  late final _yxmlelem_tree_walker_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YXmlTreeWalker>)>>(
      'yxmlelem_tree_walker_destroy');
  late final _yxmlelem_tree_walker_destroy = _yxmlelem_tree_walker_destroyPtr
      .asFunction<void Function(ffi.Pointer<YXmlTreeWalker>)>();

  /// Moves current `iterator` to a next value (either `YXmlElement` or `YXmlText`), returning its
  /// pointer or a null, if an `iterator` already reached the last successor node.
  ///
  /// Values returned by this function should be eventually released using [youtput_destroy].
  ffi.Pointer<YOutput> yxmlelem_tree_walker_next(
    ffi.Pointer<YXmlTreeWalker> iterator,
  ) {
    return _yxmlelem_tree_walker_next(
      iterator,
    );
  }

  late final _yxmlelem_tree_walker_nextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YOutput> Function(
              ffi.Pointer<YXmlTreeWalker>)>>('yxmlelem_tree_walker_next');
  late final _yxmlelem_tree_walker_next = _yxmlelem_tree_walker_nextPtr
      .asFunction<ffi.Pointer<YOutput> Function(ffi.Pointer<YXmlTreeWalker>)>();

  /// Inserts an `YXmlElement` as a child of a current node at the given `index` and returns its
  /// pointer. Node created this way will have a given `name` as its tag (eg. `p` for `<p></p>` node).
  ///
  /// An `index` value must be between 0 and (inclusive) length of a current XML element (use
  /// [yxmlelem_child_len] function to determine its length).
  ///
  /// A `name` must be a null-terminated UTF-8 encoded string, which will be copied into current
  /// document. Therefore `name` should be freed by the function caller.
  ffi.Pointer<Branch> yxmlelem_insert_elem(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
    int index,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _yxmlelem_insert_elem(
      xml,
      txn,
      index,
      name,
    );
  }

  late final _yxmlelem_insert_elemPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Branch> Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('yxmlelem_insert_elem');
  late final _yxmlelem_insert_elem = _yxmlelem_insert_elemPtr.asFunction<
      ffi.Pointer<Branch> Function(ffi.Pointer<Branch>,
          ffi.Pointer<YTransaction>, int, ffi.Pointer<ffi.Char>)>();

  /// Inserts an `YXmlText` as a child of a current node at the given `index` and returns its
  /// pointer.
  ///
  /// An `index` value must be between 0 and (inclusive) length of a current XML element (use
  /// [yxmlelem_child_len] function to determine its length).
  ffi.Pointer<Branch> yxmlelem_insert_text(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
    int index,
  ) {
    return _yxmlelem_insert_text(
      xml,
      txn,
      index,
    );
  }

  late final _yxmlelem_insert_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Branch> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>, ffi.Uint32)>>('yxmlelem_insert_text');
  late final _yxmlelem_insert_text = _yxmlelem_insert_textPtr.asFunction<
      ffi.Pointer<Branch> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int)>();

  /// Removes a consecutive range of child elements (of specified length) from the current
  /// `YXmlElement`, starting at the given `index`. Specified range must fit into boundaries of current
  /// XML node children, otherwise this function will panic at runtime.
  void yxmlelem_remove_range(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
    int index,
    int len,
  ) {
    return _yxmlelem_remove_range(
      xml,
      txn,
      index,
      len,
    );
  }

  late final _yxmlelem_remove_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Uint32, ffi.Uint32)>>('yxmlelem_remove_range');
  late final _yxmlelem_remove_range = _yxmlelem_remove_rangePtr.asFunction<
      void Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int, int)>();

  /// Returns an XML child node (either a `YXmlElement` or `YXmlText`) stored at a given `index` of
  /// a current `YXmlElement`. Returns null pointer if `index` was outside of the bound of current XML
  /// node children.
  ///
  /// Returned value should be eventually released using [youtput_destroy].
  ffi.Pointer<YOutput> yxmlelem_get(
    ffi.Pointer<Branch> xml,
    ffi.Pointer<YTransaction> txn,
    int index,
  ) {
    return _yxmlelem_get(
      xml,
      txn,
      index,
    );
  }

  late final _yxmlelem_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>, ffi.Uint32)>>('yxmlelem_get');
  late final _yxmlelem_get = _yxmlelem_getPtr.asFunction<
      ffi.Pointer<YOutput> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int)>();

  /// Returns the length of the `YXmlText` string content in bytes (without the null terminator
  /// character)
  int yxmltext_len(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxmltext_len(
      txt,
      txn,
    );
  }

  late final _yxmltext_lenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>>('yxmltext_len');
  late final _yxmltext_len = _yxmltext_lenPtr.asFunction<
      int Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Returns a null-terminated UTF-8 encoded string content of a current `YXmlText` shared data type.
  ///
  /// Generated string resources should be released using [ystring_destroy] function.
  ffi.Pointer<ffi.Char> yxmltext_string(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yxmltext_string(
      txt,
      txn,
    );
  }

  late final _yxmltext_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>)>>('yxmltext_string');
  late final _yxmltext_string = _yxmltext_stringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();
